--- a/package.json
+++ b/package.json
@@ -18,7 +18,11 @@
     "@angular/platform-browser": "^18.2.0",
     "@angular/platform-browser-dynamic": "^18.2.0",
     "@angular/router": "^18.2.0",
+    "autoprefixer": "^10.4.20",
+    "jsbarcode": "^3.11.6",
+    "postcss": "^8.4.49",
     "rxjs": "~7.8.0",
+    "tailwindcss": "^3.4.15",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.10"
   },
